          per-domain and global per-recipient policy, including per-recipient
          white/blacklist, spam policy.
        - New index in `amavisd` database for SQL column `policy.policy_name`.
          Required by iRedAdmin-Pro self-service.
        - On RHEL/CentOS, phpldapadmin is now installed from EPEL repo.

    * Fixed:
        - Replace mod_auth_mysql/pgsql by apr-util-mysql/pgsql for Awstats
          and Cluebringer webui user authentication on Debian/Ubuntu.
        - Set 'receive_override_options=no_address_mappings' in Postfix to
          disable address mappings before content filter (Amavisd, in our
          case), and remove 'no_address_mappings' in Postfix master.cf defined
          for transport '127.0.0.1:10025'.
          Important note: you should comment out
          'receive_override_options=no_address_mappings' in Postfix if you
          don't have a content filter.
        - Not enable cron job to update SpamAssassin rules in file
          /etc/default/spamassassin (CRON=1) on Debian/Ubuntu.
        - Incorrect quota dict name in Dovecot quota warning script.
        - Decrease number of pre-forked Amavisd processes to 4 to reduce
          memory usage.
        - Add missing SQL column (mailbox.enableindexer-worker) and LDAP
          attribute/value pair: enabledService=indexer-worker. Required by
          Dovecot.
          Thanks dwbotsch <botsch _at_ cnf.cornell.edu> for the report.

    * Updated packages:
        + Roundcube webmail -> 1.0.3
        + iRedAPD -> 1.4.4. Bug fixes, performance improvement, new plugins.
        + iRedAdmin -> 0.4. New tool scripts, fixes several issues.

    * Below packages are removed from iRedMail for security concern and their
      own package dependences:
        - phpMyAdmin
        - phpPgAdmin
        - phpLDAPadmin

      If you need a sql management tool, please try http://adminer.org/
      (web-based, a single PHP file) or other desktop applications instead.