@@ -56,6 +56,8 @@ install_all()
 
     for p in \
         archivers_p5-Archive-Tar \
+        archivers_p7zip \
+        archivers_rar \
         converters_libiconv \
         databases_postgresql${PREFERRED_PGSQL_VER}-client \
         databases_postgresql${PREFERRED_PGSQL_VER}-contrib \
@@ -346,6 +348,14 @@ EOF
 OPTIONS_FILE_SET+=TEXTDIFF
 EOF
 
+    cat > /var/db/ports/archivers_p7zip/options <<EOF
+OPTIONS_FILE_SET+=DOCS
+EOF
+
+    cat > /var/db/ports/archivers_rar/options <<EOF
+OPTIONS_FILE_SET+=DOCS
+EOF
+
     cat > /var/db/ports/dns_p5-Net-DNS/options <<EOF
 OPTIONS_FILE_SET+=IPV6
 OPTIONS_FILE_SET+=IDN
@@ -383,12 +393,12 @@ EOF
 
     # Amavisd-new. REQUIRED.
     cat > /var/db/ports/security_amavisd-new/options <<EOF
-OPTIONS_FILE_UNSET+=ALTERMIME
+OPTIONS_FILE_SET+=ALTERMIME
 OPTIONS_FILE_SET+=ARC
 OPTIONS_FILE_SET+=ARJ
 OPTIONS_FILE_SET+=BDB
 OPTIONS_FILE_SET+=CAB
-OPTIONS_FILE_UNSET+=DOCS
+OPTIONS_FILE_SET+=DOCS
 OPTIONS_FILE_SET+=FILE
 OPTIONS_FILE_SET+=FREEZE
 OPTIONS_FILE_SET+=IPV6
@@ -399,14 +409,14 @@ OPTIONS_FILE_SET+=MSWORD
 OPTIONS_FILE_UNSET+=MYSQL
 OPTIONS_FILE_SET+=NOMARCH
 OPTIONS_FILE_SET+=P0F
-OPTIONS_FILE_UNSET+=P7ZIP
+OPTIONS_FILE_SET+=P7ZIP
 OPTIONS_FILE_UNSET+=PGSQL
-OPTIONS_FILE_UNSET+=RAR
+OPTIONS_FILE_SET+=RAR
 OPTIONS_FILE_SET+=RPM
 OPTIONS_FILE_SET+=SASL
 OPTIONS_FILE_SET+=SNMP
 OPTIONS_FILE_SET+=SPAMASSASSIN
-OPTIONS_FILE_UNSET+=SQLITE
+OPTIONS_FILE_SET+=SQLITE
 OPTIONS_FILE_SET+=TNEF
 OPTIONS_FILE_SET+=UNARJ
 OPTIONS_FILE_SET+=UNRAR
